--- a/css/styles.css
+++ b/css/styles.css
@@ -712,6 +712,8 @@ img {
 
 .subscribe-wrapper {
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
   width: 100%;
 }
@@ -746,6 +748,7 @@ img {
 }
 
 .subscribe-title {
+  
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -756,6 +759,7 @@ img {
 
 .subscribe-form {
   display: flex;
+  flex-wrap: wrap;
   gap: 24px;
 }
 
