--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ img {
   flex: none;
   order: 0;
   flex-grow: 0;
-}
+  }
 
 .page-header {
   border-bottom: 1px solid #e7e9fc;
@@ -79,7 +79,8 @@ img {
 .common-container {
   display: flex;
   align-items: center;
-}
+  
+  }
 
 .container {
   width: 100%;
@@ -90,10 +91,12 @@ img {
 .page-navigation {
   display: flex;
   align-items: center;
+ 
 }
 
 .menu {
   display: flex;
+  /* display: none; */
   gap: 40px;
 }
 
@@ -188,6 +191,7 @@ img {
 }
 
 .contact-information {
+  /* display: none; */
   font-style: normal;
   margin-left: auto;
 }
@@ -206,31 +210,38 @@ img {
 
 .main-information {
   background-color: var(--brand-color);
-  padding: 188px 0;
+  padding: 112px 0;
   background-color: #2e2f42;
   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-    url(../images/people-office.jpg);
+    url(../images/people-office-mob.jpg);
 
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 1440px;
+  /* max-width: 1440px; */
   margin: 0 auto;
+}
+
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .main-information {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+      url(../images/people-office-mob-2x.jpg);
+  }
 }
 
 .main-title {
   font-style: normal;
   font-weight: 700;
-  font-size: 56px;
-  line-height: 1.07;
-  max-width: 496px;
+  font-size: 36px;
+  line-height: 1.11;
+  max-width: 320px;
 
   /* or 107% */
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 48px;
-  letter-spacing: 0.02em;
+  margin-bottom: 72px;
+  letter-spacing: 0.72px;
 
   /* WHITE */
   color: #ffffff;
@@ -288,6 +299,58 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (min-width: 320px) {
+  .container {
+    max-width: 428px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+
+  .main-information {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+      url(../images/people-office-tab.jpg);
+  }
+
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    .main-information {
+      background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+        url(../images/people-office-tab-2x.jpg);
+    }
+  }
+
+  .main-title {
+    font-size: 56px;
+    line-height: 1.07;
+    max-width: 496px;
+    margin-bottom: 36px;
+    letter-spacing: 1.12px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .main-information {
+    padding: 188px 0;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+      url(../images/people-office.jpg);
+    max-width: 1440px;
+  }
+
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    .main-information {
+      background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+        url(../images/people-office-2x.jpg);
+    }
+  }
+  .main-title {
+    max-width: 496px;
+    margin-bottom: 48px;
+  }
+}
+
 /* Друга секція. Основні принципи */
 
 .container-principles {
@@ -317,18 +380,13 @@ img {
 .principles {
   text-align: center;
   font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
   margin-bottom: 8px;
-
-  /* identical to box height, or 120% */
-  letter-spacing: 0.02em;
-
-  /* NAVY BLUE */
   color: var(--brand-color);
-
-  /* Inside auto layout */
   flex: none;
   order: 0;
   flex-grow: 0;
@@ -352,7 +410,7 @@ img {
   flex-grow: 0;
 }
 
-@media screen and (min-width: 428px) {
+@media screen and (min-width: 320px) {
   .container {
     max-width: 428px;
   }
@@ -384,11 +442,21 @@ img {
 @media screen and (min-width: 1158px) {
   .container {
     max-width: 1158px;
+    padding: 0 15px;
   }
 
   .summary {
     display: flex;
     gap: 24px;
+  }
+
+  .principles {
+    text-align: center;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
   }
 
   .container-principles {
@@ -547,7 +615,6 @@ img {
   }
 
   .our-team-description-list {
-    /* flex-wrap: nowrap; */
     row-gap: 72px;
   }
 }
@@ -557,10 +624,13 @@ img {
     max-width: 768px;
   }
 
+  .team-container {
+    max-width: 584px;
+  }
+
   .our-team-description-list {
     display: flex;
     column-gap: 24px;
-    margin: 0 108px;
   }
 
   .our-team-identification {
@@ -581,12 +651,6 @@ img {
     padding: 120px 0;
   }
 
-  .our-team-description-list {
-    display: flex;
-    column-gap: 24px;
-    margin: 0 108px;
-  }
-
   .our-team-identification {
     width: calc((100% - 72px) / 4);
   }
@@ -596,13 +660,13 @@ img {
 
 .our-customers {
   padding: 96px 0;
-  /* padding: 120px 0; */
 }
 
 .icons-customers {
   display: flex;
   justify-content: center;
-  gap: 24px;
+  column-gap: 24px;
+  row-gap: 72px;
   flex-wrap: wrap;
 }
 
@@ -636,7 +700,7 @@ img {
   }
 }
 
-@media screen and (min-width: 428px) {
+@media screen and (min-width: 768px) {
   .icons-customers {
     width: calc((100%-48px) / 3);
   }
@@ -649,6 +713,7 @@ img {
 
   .icons-customers {
     flex-wrap: nowrap;
+    gap: 24px;
   }
 }
 
@@ -677,7 +742,7 @@ img {
   margin-bottom: 16px;
 
   display: inline-block;
-    align-items: center;
+  align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 
@@ -700,7 +765,6 @@ img {
   max-width: 264px;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  margin-bottom: 72px;
 }
 
 .social-media {
@@ -730,7 +794,7 @@ img {
 
 .social-media-list {
   display: flex;
-    gap: 16px;
+  gap: 16px;
 }
 
 .social-media-list-item {
@@ -748,7 +812,6 @@ img {
 }
 
 .subscribe-title {
-  
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -803,6 +866,25 @@ img {
   margin-left: 16px;
 }
 
+@media screen and (min-width: 768px) {
+  .footer {
+    max-width: 584px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 72px;
+  }
+
+  .social-media {
+    display: block;
+  }
+
+  .subscribe-wrapper {
+    width: 100%;
+  }
+}
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -816,7 +898,7 @@ img {
 
 .modal {
   position: absolute;
-  width: 408px;
+  width: 392px;
   min-height: 584px;
   left: 50%;
   top: 50%;
@@ -827,6 +909,22 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 320px) {
+  .container {
+    max-width: 428px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+
+  .modal {
+    width: 408px;
+  }
 }
 
 .modal-close-btn {
