--- a/css/styles.css
+++ b/css/styles.css
@@ -95,9 +95,12 @@ img {
 }
 
 .menu {
-  display: flex;
-  /* display: none; */
-  gap: 40px;
+  display: none;
+  
+}
+
+.contact-information {
+  display: none;
 }
 
 .address-list {
@@ -106,20 +109,6 @@ img {
   margin-left: 332px;
 }
 
-.menu-link {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  display: block;
-  line-height: 1.5;
-  padding: 24px 0;
-
-  /* identical to box height, or 150% */
-  letter-spacing: 0.02em;
-
-  /* NAVY BLUE */
-  color: var(--brand-color);
-}
 
 .menu-item,
 .link:active {
@@ -190,21 +179,45 @@ img {
   transform: translateY(0%);
 }
 
-.contact-information {
-  /* display: none; */
-  font-style: normal;
-  margin-left: auto;
+@media screen and (min-width: 768px) {
+  .menu {
+    display: flex;
+    gap: 40px;
+  }
+  
+  .menu-link {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    display: block;
+    line-height: 1.5;
+    padding: 24px 0;
+  
+    /* identical to box height, or 150% */
+    letter-spacing: 0.02em;
+  
+    /* NAVY BLUE */
+    color: var(--brand-color);
+  }
+  
+  .contact-information {
+    display: inline-block;
+       font-style: normal;
+    margin-left: auto;
+  }
+  
+  .contacts-element {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
 }
 
-.contacts-element {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
 /* Перша секція. Головна інформація */
 
