--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,6 @@ img {
   display: flex;
   align-items: center;
   justify-content: space-between;
-
 }
 
 .menu {
@@ -202,10 +201,8 @@ img {
   justify-content: flex-end;
 }
 
-
 @media screen and (min-width: 320px) {
   .common-container {
-    
     height: 70px;
   }
 
@@ -217,7 +214,8 @@ img {
   .menu-icon {
     border-radius: 4px;
   }
-}
+
+ }
 
 @media screen and (min-width: 768px) {
   .page-navigation {
@@ -284,7 +282,7 @@ img {
     gap: 40px;
   }
 
-   .contacts-element {
+  .contacts-element {
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -306,17 +304,16 @@ img {
   padding: 80px 35px 40px 40px;
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
-  }
+  display: flex;
+  flex-direction: column;
+}
 
-  .mob-menu.is-open {
-    transform: translateX(0);
-  }
+.mob-menu.is-open {
+  transform: translateX(0);
+}
 
 .close-mob-menu-button {
-  /* display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute; */
+  position: absolute;
   display: block;
   margin-left: auto;
   color: black;
@@ -331,7 +328,6 @@ img {
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin-bottom: 32px;
 }
 
 .mob-menu-list:not(:last-child) {
@@ -347,6 +343,11 @@ img {
   line-height: 40px;
   letter-spacing: 0.72px;
   text-transform: capitalize;
+  margin-bottom: 40px;
+}
+
+.mob-container {
+  margin: auto;
 }
 
 .mob-contacts {
@@ -375,6 +376,7 @@ img {
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.4px;
+  margin-top: 40px;
 }
 
 .mob-social-list {
@@ -500,12 +502,6 @@ img {
   margin: 0 auto;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-/* @media screen and (min-width: 320px) {
-  .container {
-    max-width: 428px;
-  }
-} */
 
 @media screen and (min-width: 768px) {
   /* .container {
@@ -819,11 +815,7 @@ img {
 }
 
 @media screen and (min-width: 320px) {
-  /* .container {
-    max-width: 428px;
-  } */
-
-  .our-team-description-list {
+    .our-team-description-list {
     row-gap: 72px;
   }
 }
@@ -934,7 +926,7 @@ img {
 .under-logo-and-slogan {
   background-color: #2e2f42;
   padding: 96px 0;
-  /* padding: 100px 0; */
+  
 }
 
 .footer-logo {
@@ -971,12 +963,12 @@ img {
   max-width: 264px;
   letter-spacing: 0.32px;
   color: #f4f4fd;
-  margin-bottom: 72px;
 }
 
 .social-media {
   display: block;
-  margin: 0 auto;
+  margin-bottom: 72px;
+  /* margin: 0 auto; */
   /* margin-right: 80px;
   margin-left: 120px; */
 }
@@ -1002,7 +994,6 @@ img {
 .social-media-list {
   display: flex;
   gap: 16px;
-  margin-bottom: 72px;
 }
 
 .social-media-list-item {
@@ -1032,6 +1023,7 @@ img {
   display: flex;
   flex-wrap: wrap;
   gap: 16px;
+  width: 100%;
 }
 
 .subscribe-form-desc {
@@ -1041,7 +1033,7 @@ img {
 }
 
 .subscribe-form-email {
-  width: 264px;
+  width: 100%;
   height: 40px;
   border: 1px solid #ffffff;
   background-color: transparent;
@@ -1092,7 +1084,7 @@ img {
     height: 72px; */
     flex-direction: column;
     justify-content: center;
-    /* gap: 72px 24px; */
+    margin-bottom: 72px;
   }
 }
 
@@ -1170,7 +1162,7 @@ img {
 
 @media screen and (min-width: 1158px) {
   .container {
-    max-width: 1440px;
+    max-width: 1158px;
   }
 
   .footer {
@@ -1191,76 +1183,7 @@ img {
     margin-right: 80px;
   }
 
-  /* .footer {
-    display: flex;
-    align-items: baseline;
-  }
-
-  .under-logo-and-slogan {
-    background-color: var(--brand-color);
-    padding: 100px 0;
-  }
-
-  .footer-logo-container {
-    margin-right: 120px;
-    padding-left: 156px;
-  } */
-
-  /* .footer-logo {
-    font-family: 'Raleway', sans-serif;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.17;
-    color: #4d5ae5;
-    margin-bottom: 16px;
-
-    display: inline-block;
-    align-items: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-  }
-
-  .description-first-word-under-logo {
-    color: #f4f4fd;
-  } */
-
-  /* .footer-description {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    background-color: var(--brand-color);
-    max-width: 264px;
-    letter-spacing: 0.02em;
-    color: #f4f4fd;
-  }
-
-  .social-media {
-    display: block;
-  }
-
-  .title-social-media {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #ffffff;
-    margin-bottom: 16px;
-  } */
-
-  /* .social-media-list {
-    display: flex;
-    gap: 16px;
-  }
-
-  .social-media-list-item {
-    width: 40px;
-    height: 40px;
-  } */
+  
 }
 
 .modal {
@@ -1282,6 +1205,14 @@ img {
   .modal {
     width: 290px;
   }
+
+  .mob-tel {
+    font-size: 24px;
+  }
+  
+  .mob-social-list {
+    gap: 30px;
+  }
 }
 
 @media screen and (min-width: 428px) {
@@ -1290,6 +1221,14 @@ img {
   } */
   .modal {
     width: 392x;
+  }
+
+  .mob-tel {
+    font-size: 36px;
+  }
+  
+  .mob-social-list {
+    gap: 56px;
   }
 }
 
