--- a/css/styles.css
+++ b/css/styles.css
@@ -214,8 +214,7 @@ img {
   .menu-icon {
     border-radius: 4px;
   }
-
- }
+}
 
 @media screen and (min-width: 768px) {
   .page-navigation {
@@ -312,6 +311,10 @@ img {
   transform: translateX(0);
 }
 
+.mob-menu-container {
+  margin-bottom: 284px;
+}
+
 .close-mob-menu-button {
   position: absolute;
   display: block;
@@ -330,8 +333,15 @@ img {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mob-menu-list:not(:last-child) {
+.mob-menu-item:not(:last-of-type) {
   margin-bottom: 40px;
+}
+
+.mob-contacts:not(:last-child) {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 48px;
+  gap: 40px;
 }
 
 .mob-menu-link {
@@ -347,7 +357,12 @@ img {
 }
 
 .mob-container {
-  margin: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.mob-contacts-social-list {
+  margin-top: auto;
 }
 
 .mob-contacts {
@@ -355,7 +370,6 @@ img {
 }
 
 .mob-tel {
-  color: var(--iris, #4d5ae5);
   color: var(--iris, #4d5ae5);
   font-size: 36px;
   font-family: Roboto;
@@ -815,7 +829,7 @@ img {
 }
 
 @media screen and (min-width: 320px) {
-    .our-team-description-list {
+  .our-team-description-list {
     row-gap: 72px;
   }
 }
@@ -926,7 +940,6 @@ img {
 .under-logo-and-slogan {
   background-color: #2e2f42;
   padding: 96px 0;
-  
 }
 
 .footer-logo {
@@ -1182,8 +1195,6 @@ img {
     width: 208px;
     margin-right: 80px;
   }
-
-  
 }
 
 .modal {
@@ -1209,7 +1220,7 @@ img {
   .mob-tel {
     font-size: 24px;
   }
-  
+
   .mob-social-list {
     gap: 30px;
   }
@@ -1226,7 +1237,7 @@ img {
   .mob-tel {
     font-size: 36px;
   }
-  
+
   .mob-social-list {
     gap: 56px;
   }
